--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 
     myButton.addEventListener('click',function (event) {
         //console.log("Button Clicked",event)
-        var url = 'https://radio-download.dw.com/Events/dwelle/deutschkurse/deutschwarumnicht/serie1/eng/DWN_Englisch_Serie1_Lektion01_dwdownload.mp3'
+        var url = 'http://radio-download.dw.com/Events/dwelle/deutschkurse/deutschwarumnicht/serie1/eng/DWN_Englisch_Serie1_Lektion01_dwdownload.mp3'
         fetch(url)
             .then(function (response) {
             console.log("DONE:",response)
